# kalima-mcp

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DONE.md  Dockerfile  KNOWN_ISSUES.md  METHODOLOGY.md  MIGRATION_TO_UTCP.md  QURAN_RESEARCH_INTEGRATION.md  README.md  SETUP.md  TEST_REPORT.md  TODO.md  add-to-opencode.ps1  add_missing.py  add_qul.py  add_qul_roots.py  add_verse_roots.py  check.py  check_counts.py  check_match.py  compare_final.py  compare_qul.py  compare_roots.py  debug1.py  debug_map.py  debug_mismatch.py  debug_roots.py  debug_simple.py  download_data.py  find_diff.py  get_tokens.py  interpretive_audit.py  manifold_visualizer.html  map_all_roots.py  map_qul.py  map_roots.py  (+27 more)
.claude/: settings.local.json
.gemini/: settings.json
.obsidian/: workspace.json
archive/: README.md  rebuild-desktop.bat
conformance/: __init__.py
docs/: COMMAND_LAWS.md  Community Coherence.txt  Quranic Experiments.txt  commands.txt
fixtures/: README.md
notes/: Al-Hijr.md  Fine Arts.md  (+15 more)
scripts/: Cargo.toml  __init__.py  build_combined_jsonl.py  cache_root_vectors.py  check_compositionality.py  check_db.rs  check_file.rs  convert_buckwalter_to_arabic.py  dock_meeting_insights.py  explore_noor_db.rs  fix_token_diacritics_simple.py  generate_db_graph.py  generate_surah1_graph.py  import_reference_tables.py  load_sahih_international.py  location_anchor.py  migrate_claims_to_entries.py  migrate_drop_dependencies.py  migrate_drop_verse_texts.py  migrate_entry_locations.py  migrate_entry_terms_to_scope.py  migrate_feature_id.py  migrate_fix_library.py  migrate_fk_cleanup.py  migrate_morpheme_features.py  migrate_patterns_to_entry_terms.py  migrate_quran_research.py  migrate_ref_features.py  migrate_rename_tables.py  migrate_roots.py  migrate_roots_to_manifold.py  migrate_scope_verification.py  migrate_segments_normalize.py  migrate_to_compositional.py  migrate_units.py  migrate_units_pure.py  migrate_uthmani_forms.py  migrate_verse_evidence_to_entries.py  migrate_word_library.py  obvious_anchors.py  (+19 more)
scripts/lib/: __init__.py  io.py  paths.py  pipeline.py  validate.py
(+182 files in other folders)
