[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mcp-server"
version = "2.0.0"
description = "Quranic Research MCP Server — text analysis, morphological research, and falsification-based linguistic exploration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "geometer @ git+https://github.com/Syntra-Env/Geometer",
]

[project.scripts]
scholar = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
