[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalima-mcp-server"
version = "2.0.0"
description = "Kalima MCP Server — Quranic research with HUFD field dynamics"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "huggingface_hub>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
kalima = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
